--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>I Am Skull</title>
+    <title>FROM MOHIT TO RAHUL </title>
     <link rel = "icon" href = "images/skull.png" type = "image/x-icon"> 
   
    
