--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="px-4 py-4 md:px-10 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500">
                             <h1 class="font-bold font-mono text-lg">
-                                BIRTHDAY:- 09 November 2020
+                                DATE:- 09 November 2020
                             </h1>
                             <p class="py-4 font-mono">
                                 Happy birthday brother. This is a small virtual gift for you buddy!! I pray all your birthday wishes to come true. Here is a wish for your birthday May you receive whatever you ask for, may you find whatever you seek and yet another adventurous year awaits you, and to celebrate your birthday </br></br> Once again HAPPY BIRTHDAY CHAMP !!!
